--- a/src/components/NavBar/styles.css
+++ b/src/components/NavBar/styles.css
@@ -11,18 +11,35 @@
 }
 
 .link {
-  display: block;
+  display: inline-block;
   padding: 20px;
-  background: #ecf5f5;
+  background: white;
   color: black;
-  z-index: 1;
   text-decoration: none;
+	border-right: 1px solid #edf4f4;
+	position: relative;
+}
+
+.link:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
+	box-shadow: 0 3px 30px 3px #e6eff1;
+}
+
+.link:last-child {
+	border-right: none;
 }
 
 .active-link {
-  background: #7e9494;
-  color: white;
-  box-shadow: none;
-  z-index: 0;
-  border-bottom: none;
+  background: #ecf5f5;
+  color: black;
+}
+
+.active-link.link:before {
+	box-shadow: 0px 0px 8px 3px #e6eff1
 }
